# apidrift

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: rules.md
examples/: README.md
examples/pricelib-v1/: pyproject.toml
examples/pricelib-v1/src/pricelib/: __init__.py  cart.py  money.py
examples/pricelib-v2/: pyproject.toml
examples/pricelib-v2/src/pricelib/: __init__.py  cart.py  money.py  tax.py
scripts/: smoke.sh
src/apidrift/: __init__.py  __main__.py  cli.py  diffing.py  extract.py  gitsource.py  model.py  report.py  rules.py  semver.py
tests/: conftest.py  test_cli.py  test_diff_classes.py  test_diff_functions.py  test_diff_modules.py  test_extract_classes.py  test_extract_functions.py  test_extract_modules.py  test_gitsource.py  test_model.py  test_semver.py
