[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apidrift"
version = "0.1.0"
description = "Diff a Python package's public API between git refs and suggest the semver bump — AST-based, never imports your code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["semver", "api-diff", "breaking-changes", "ast", "release", "versioning", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
apidrift = "apidrift.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/apidrift"
Repository = "https://github.com/JaydenCJ/apidrift"
Issues = "https://github.com/JaydenCJ/apidrift/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
